OO-5564: Option to set the initial status to "in review" in assessment course element